--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -748,7 +748,7 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
     top: 73px;
   }
   .iq-top-navbar .navbar .iq-search-bar {
-    display: none;
+    display: revert;
   }
   .form_video-upload {
     position: static;
@@ -1200,6 +1200,19 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 	}
 
 }
+@media screen and (min-width: 0px) and (max-width: 380px){
+	 .headertop{
+		margin-top: 24% !important;
+		height: 5% !important;
+	}
+}
+
+@media screen and (min-width: 381px) and (max-width: 1000px){
+  .headertop{
+   margin-top: 22% !important;
+   height: 5% !important;
+ }
+}
 @media screen and (min-width: 0px) and (max-width: 1000px){
   .FilterBtn{
     /* width: 35% !important; */
@@ -1212,10 +1225,6 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   .Providerr{
     margin-top: 15%;
   }
-	 .headertop{
-		margin-top: 21% !important;
-		height: 5% !important;
-	}
   .Respo{
     margin-top: 20% !important;
    }
@@ -1257,7 +1266,7 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   @media screen and (min-width: 600px) and (max-width: 830px){
 
     .headertop{
-     margin-top: 11% !important;
+     margin-top: 12.2% !important;
      height: 5% !important;
    }
    .LOGOO{
@@ -1269,7 +1278,7 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
    @media screen and (min-width: 829px) and (max-width: 913px){
 
     .headertop{
-     margin-top: 11% !important;
+     margin-top: 11.5% !important;
      height: 5% !important;
    }
  
@@ -1279,7 +1288,7 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
    @media screen and (min-width: 512px) and (max-width: 540px){
 
     .headertop{
-     margin-top: 14% !important;
+     margin-top: 18.4% !important;
      height: 5% !important;
    }
  
@@ -1301,7 +1310,7 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   @media screen and (min-width: 1020px) and (max-width: 1030px){
 
     .headertop{
-     margin-top: 7% !important;
+     margin-top: 8.8% !important;
      /* height: 5% !important; */
    }
  
