--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6647,7 +6647,7 @@ color: #f8f9fa !important;
   color: #f8f9fa !important;
 }
 
-    }
+    }`
 @media screen and (min-width: 990px) and (max-width: 1180px) {
   .Fullcontainer {
     max-width: 100% !important;
