--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1493,6 +1493,7 @@ background: linear-gradient(177deg, rgba(250,250,250,1) 12%, rgba(180,225,255,1)
     padding:40px;
     background:#263642;
     border-radius:10px;
+    margin-top: 5%;
     
    }
    .FooterCont{
