--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5662,13 +5662,13 @@ h6 span {
   margin: 2.5px;
 }
 
-.btn1:hover {
+.registerToggle:hover {
   background: #344452;
   border-color: #344452;
-  border-top-left-radius: 6px !important;
-  border-bottom-left-radius: 6px !important;
-  border-top-right-radius: 6px !important;
-  border-bottom-right-radius: 6px !important;
+  border-top-left-radius: 18px !important;
+  border-bottom-left-radius: 18px !important;
+  border-top-right-radius: 18px !important;
+  border-bottom-right-radius: 18px !important;
   text-align: center;
   margin: 2.5px;
   /* margin-left: 15px !important; */
@@ -5676,13 +5676,13 @@ h6 span {
   translate: none !important;
 }
 
-.btn1:focus {
+.registerToggle:focus {
   background: #344452;
   border-color: #344452;
-  border-top-left-radius: 6px !important;
-  border-bottom-left-radius: 6px !important;
-  border-top-right-radius: 6px !important;
-  border-bottom-right-radius: 6px !important;
+  border-top-left-radius: 18px !important;
+  border-bottom-left-radius: 18px !important;
+  border-top-right-radius: 18px !important;
+  border-bottom-right-radius: 18px !important;
   text-align: center;
   margin: 2.5px;
   transition: none !important;
@@ -5862,6 +5862,13 @@ h6 span {
 
 }
 
+
+
+.head-wallet-body{
+
+}
+
+
 @media only screen and (min-width: 1600px) {
   .mobile {
     display: none;
@@ -5918,26 +5925,6 @@ h6 span {
   border-radius: 10px;
 }
 
-.user-modal{
-  position: relative;
-
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  padding: 20px 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /* display: block; */
-  /* margin: 25px auto; */
-  max-width: 60%;
-
-  width: 100% !important;
-  max-height: fit-content !important;
-  border-radius: 10px;
- 
-}
 
 .rc-anchor-alert {
   display: none !important;
@@ -6093,17 +6080,22 @@ h6 span {
 
   }
   
-     /* .buycrypto-text{
-        font-size: 10px!important;  
-    } */
     .wallet-linl-text{
-      font-size: 12px;
+      font-size: 11px;
     }
   
+    
    
 
 }
 
+@media only screen and (min-width: 0px) and (max-width: 600px){
+.walletTab {
+    margin: 0vw 1vw;
+    width: 100%;
+    text-align: center;
+}
+}
 @media only screen and (min-width: 1026px) {
   .wallet-QR-row {
     margin-left: 0px;
@@ -6114,6 +6106,11 @@ h6 span {
     font-family: 'Montserrat', sans-serif;
     
   }
+  /* .walletTab {
+    margin: 0vw 2vw;
+    width: 100%;
+    text-align: center;
+  } */
 
 }
 
@@ -6142,19 +6139,15 @@ h6 span {
     text-align: center;
   }
 
-  .wallet-address-deposit {
-
-    width: 100%;
-
-  }
+  
 
   .wallet-link {
-    /* width:80%; */
+    width:100%;
     padding-left: 10px;
     justify-content: space-around;
     align-items: center;
     color: white;
-    padding-right: 10px;
+    /* padding-right: 10px; */
 
   }
 
@@ -6164,10 +6157,19 @@ h6 span {
 
   }
 
+  .wallet-address-deposit {  
+    /* jdjnjncd */
+
+    width: 100%;
+
+
+  }
+
   .wallet-icons-2 {
     /* width: 10%; */
     padding-right: 5px;
   }
+
 
 
 
@@ -6469,6 +6471,28 @@ h6 span {
 .modalbody{
 /* padding: 2rem 5rem; */
 }
+
+.user-modal{
+  position: relative;
+
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 20px 25px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* display: block; */
+  /* margin: 25px auto; */
+  max-width: 60%;
+
+  width: 100% !important;
+  max-height: fit-content !important;
+  border-radius: 10px;
+ 
+}
+
 .form2-body{
   /* padding: 1rem 4rem; */
 }
@@ -7098,7 +7122,7 @@ select {
       text-align: center;
     }
     .WalletButtonText{
-      font-size: 10px;
+      font-size: 9px;
     }
 .wallet-linl-text{
   font-size: 11px;
@@ -7110,3 +7134,62 @@ select {
 
 
 
+
+
+
+  @media screen  and (min-width:0px) and (max-width:600px){
+    .wallet-head{
+    padding:2vw
+    }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
