--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6070,7 +6070,8 @@ h6 span {
 }
 
 .wallet-linl-text{
-  
+  font-size: 13px;
+  font-weight: bold;
 }
 @media only screen and (min-width: 0px) and (max-width:600px){
 
